yamls/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: main
spec:
  replicas: 2
  selector:
    matchLabels:
      app: main
  template:
    metadata:
      labels:
        app: main
    spec:
      containers:
      - name: main-app
        image: guyashkenazi/profile-app
        ports:
        - containerPort: 5000
