yamls/mongodb-service-external.yaml
kind: Endpoints
apiVersion: v1
metadata:
  name: mongodb
subsets:
  - addresses: 
      - ip: 10.51.221.161
    ports:
      - port: 27017
