yamls/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: main
spec:
  selector:
    app: main
  ports:
  - name: main-port
    port: 5000
    targetPort: 5000
type: LoadBalancer
