yamls/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: / # This annotation ensures that the redirected traffic does not retain the original path.
spec:
  rules:
  - http:
      paths:
      - path: /cd
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80 # assuming you want to redirect to the HTTP port of argocd-server
      - path: /app
        pathType: Prefix
        backend:
          service:
            name: main
            port:
              number: 5000
